# charge_pulse

./: .gitignore  CHARGEPULSE_DEV_SPEC.md  CPO_ONBOARDING.md  ChargePulse_Architecture.docx  ChargePulse_Architecture.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  init.sql  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py  ws.py
backend/app/admin/: router.py  schemas.py  service.py
backend/app/alerts/: dispatcher.py  router.py  schemas.py  service.py
backend/app/analytics/: router.py  service.py
backend/app/auth/: permissions.py  router.py  schemas.py  security.py  service.py
backend/app/chargers/: router.py  schemas.py  service.py
backend/app/db/: session.py
backend/app/fleet/: router.py  service.py
backend/app/incidents/: router.py  schemas.py  service.py
backend/app/users/: router.py  schemas.py  service.py
backend/gateway/: command_consumer.py  handler_v16.py  handler_v16.py.bak  handler_v201.py  heartbeat_watchdog.py  message_router.py  server.py
backend/gateway/vendor_profiles/: __init__.py  abb.py  base.py  delta.py  exicom.py  generic.py  servotech.py
backend/ml/: features.py  inference.py  rules.py
backend/ml/model_store/: anomaly_CP001_1779734673.pt  failure_classifier_1779738107.xgb  failure_classifier_1779738107.xgb.meta.json
backend/ml/models/: anomaly_detector.py  (+1 more)
backend/tests/: conftest.py  test_auth.py
backend/workers/: alert_worker.py  feature_worker.py  health_score_worker.py  inference_worker.py  training_scheduler.py
(+69 files in other folders)
