[project]
name = "chargepulse-backend"
version = "0.1.0"
description = "ChargePulse backend — OCPP gateway, API, ML pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "websockets==13.*",
    "ocpp==2.0.*",
    "pydantic==2.*",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "asyncpg==0.30.*",
    "sqlalchemy==2.*",
    "alembic==1.*",
    "redis[hiredis]==5.*",
    "httpx==0.27.*",
    "python-dotenv",
    "structlog",
    "apscheduler==3.10.*",
    "torch>=2.4.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "scikit-survival>=0.23.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["app", "gateway"]
